changes by priya and link rectified

--- a/indexfinal1.html
+++ b/indexfinal1.html
@@ -468,15 +468,15 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-            <li><a href="pages/examples/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-            <li><a href="pages/examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-            <li><a href="pages/examples/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-            <li><a href="pages/examples/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-            <li><a href="pages/examples/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-            <li><a href="pages/examples/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-            <li><a href="pages/examples/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-            <li><a href="pages/examples/pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
+            <li><a href="scripts/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
+            <li><a href="scripts/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
+            <li><a href="scripts/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
+            <li><a href="scripts/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
+            <li><a href="scripts/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
+            <li><a href="scripts/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
+            <li><a href="scripts/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
+            <li><a href="scripts/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
+            <li><a href="scripts/pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
           </ul>
         </li>
         <li class="treeview">
