--- a/scripts/helfis.html
+++ b/scripts/helfis.html
@@ -61,7 +61,7 @@
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
        <div class="form-group has-feedback">
-        <input type="number" class="form-control" name="phone" id="number" placeholder="Phone Number"  required>
+        <input type="text" class="form-control" name="phone" id="number" placeholder="Phone Number"  required>
         <span class="glyphicon glyphicon-phone form-control-feedback"></span>
       </div>
        <select name="dd1" id="dd1" class="form-control">
