--- a/scripts/chooseplan.html
+++ b/scripts/chooseplan.html
@@ -2,6 +2,7 @@
 <head>
 <title>Choose Plan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
 </head>
 <body>
 <style type="text/css">
@@ -26,7 +27,7 @@ body {
 
 .promos {
   padding-top: 170px;
-   zoom:70%;
+   zoom:65%;
   max-width: 1140px;
   margin: 0 auto;
 }
@@ -123,6 +124,11 @@ body {
 
 
 </style>
+<center>
+    <h3>COMPANY  REGISTRATION</h3>
+    <h2>Free for 15 days </h2>
+    <h4>After your trial ends,pick a plan that best fits your needs</h4>
+</center>
 <div class="promos">
   <div class="promo first">
         <ul class="features">
@@ -152,7 +158,8 @@ body {
       </div>
        <h6>Free 30 days trial</h6>
       </div>
-  </div>
+  
 </div>
+</body>
 </body>
 </html>
