company employee detail

--- a/CompanyDashboardFinal/index.html
+++ b/CompanyDashboardFinal/index.html
@@ -71,7 +71,7 @@
                 <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Shashwat Yadav
+                Priya Dhunna
                   
                 </p>
               </li>
